crates/parsing/src/grammar/snapshots/parsing__grammar__tests__expect_parse@unqualified.input.snap
---
source: crates/parsing/src/grammar/tests.rs
expression: result
input_file: crates/parsing/src/grammar/inputs/passing/expression/unqualified.input
---
Input: (+) Foo bar

Start { kind: ApplicationExpression }
  Start { kind: OperatorNameExpression }
    Start { kind: QualifiedName }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: NameRef }
          Token { kind: Operator }
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
  Finish
  Start { kind: OneOrMore }
    Start { kind: TermArgument }
      Start { kind: ConstructorExpression }
        Start { kind: QualifiedName }
          Start { kind: NameRef }
            Token { kind: Upper }
          Finish
        Finish
      Finish
    Finish
  Finish
Finish
